Added the Presistance implemations e.g Datasbase Context and configuration files

--- a/HRPlus.Presistance/HRPlus.Presistance.csproj
+++ b/HRPlus.Presistance/HRPlus.Presistance.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HRPlus.Domain\HRPlus.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
