--- a/HRPlus.Api/appsettings.json
+++ b/HRPlus.Api/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "HrPlusDatabaseConnectionString": "Server=DESKTOP-3P7KG19;Database=HRPlus_Management;Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
+  },
   "EmailSettings": {
     "ApiKey": "SendGrid-Key",
     "FromAdress": "no-reply@HrPlusSysetms.com",
