Removed the weather forecast

--- a/HRPlus.Api/HRPlus.Api.csproj
+++ b/HRPlus.Api/HRPlus.Api.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\HRPlus.Presistance\HRPlus.Presistance.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
