Creating the LeaveAllocation Feature

--- a/HRPlus.Application/HRPlus.Application.csproj
+++ b/HRPlus.Application/HRPlus.Application.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\HRPlus.Domain\HRPlus.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\LeaveAllocation\Commands\CreateLeaveAllocation\" />
+    <Folder Include="Features\LeaveAllocation\Commands\DeleteLeaveAllocation\" />
+    <Folder Include="Features\LeaveAllocation\Commands\UpdateLeaveAllocation\" />
+  </ItemGroup>
+
 </Project>
