--- a/HRPlus.Application/HRPlus.Application.csproj
+++ b/HRPlus.Application/HRPlus.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\HRPlus.Domain\HRPlus.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\LeaveRequest\Commands\" />
+  </ItemGroup>
+
 </Project>
