--- a/HRPlusPresistanceIntergation.Test/HRPlusPresistanceIntergation.Test.csproj
+++ b/HRPlusPresistanceIntergation.Test/HRPlusPresistanceIntergation.Test.csproj
@@ -10,9 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
-    <PackageReference Include="Moq" Version="4.20.69" />
-    <PackageReference Include="Shouldly" Version="4.2.1" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,16 +21,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Moq" Version="4.20.69" />
+    <PackageReference Include="Shouldly" Version="4.2.1" />
+    
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\HRPlus.Application\HRPlus.Application.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Features\LeaveAllocations\" />
-    <Folder Include="Features\LeaveRequests\" />
-    <Folder Include="Features\LeaveTypes\Commands\" />
+    <ProjectReference Include="..\HRPlus.Presistance\HRPlus.Presistance.csproj" />
   </ItemGroup>
 
 </Project>
